--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  dartz: 
+  get_it:
 
 
   # The following adds the Cupertino Icons font to your application.
